db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: roysahar
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: "mariadb"
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6.4-focal
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-pvc
