mariadb-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: roysahar
  name: mariadb
spec:
  ports:
  - port: 3306
  selector:
    app: mariadb
  clusterIP: None
