wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: roysahar
  name: wordpress
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31411
  selector:
    app: wordpress
